fix: image stuck to bottom

--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -123,10 +123,6 @@ section {
     margin-left: auto;
   }
 
-  .landing-hero img {
-    height: 100%;
-  }
-
   .app-links {
     display: flex;
   }
